src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> program
Rule 1     program -> header block DOT
Rule 2     header -> PROGRAM IDENTIFIER SEMICOLON
Rule 3     block -> VAR variable_declaration body
Rule 4     block -> body
Rule 5     block -> function block
Rule 6     block -> procedure block
Rule 7     variable_declaration -> identifier_list COLON type_name SEMICOLON variable_declaration
Rule 8     variable_declaration -> identifier_list COLON type_name SEMICOLON
Rule 9     identifier_list -> IDENTIFIER COMMA identifier_list
Rule 10    identifier_list -> IDENTIFIER
Rule 11    array_type -> ARRAY LBRACKET type RANGE type RBRACKET OF type_name
Rule 12    array_access -> IDENTIFIER LBRACKET type RBRACKET
Rule 13    body -> BEGIN statements END
Rule 14    statements -> statement SEMICOLON statements
Rule 15    statements -> statement SEMICOLON
Rule 16    statement -> writeln
Rule 17    statement -> assignment
Rule 18    statement -> procedure_call
Rule 19    statement -> cond_if
Rule 20    statement -> while_loop
Rule 21    statement -> for_loop
Rule 22    statement -> repeat_loop
Rule 23    statement -> readln
Rule 24    assignment -> type ASSIGNMENT type
Rule 25    assignment -> type ASSIGNMENT expression
Rule 26    assignment -> type ASSIGNMENT length
Rule 27    assignment -> type ASSIGNMENT negation
Rule 28    expression -> type operation type
Rule 29    expression -> expression_paren
Rule 30    expression -> expression operation type
Rule 31    expression -> expression operation expression
Rule 32    expression -> func_call
Rule 33    expression -> condition
Rule 34    expression_paren -> LPAREN expression RPAREN
Rule 35    operation -> plus
Rule 36    operation -> minus
Rule 37    operation -> times
Rule 38    operation -> division
Rule 39    operation -> div
Rule 40    operation -> mod
Rule 41    operation -> RANGE
Rule 42    type_name -> NINTEGER
Rule 43    type_name -> NREAL
Rule 44    type_name -> NSTRING
Rule 45    type_name -> NCHAR
Rule 46    type_name -> NBOOLEAN
Rule 47    type_name -> array_type
Rule 48    type -> integer
Rule 49    type -> real
Rule 50    type -> string
Rule 51    type -> char
Rule 52    type -> boolean
Rule 53    type -> identifier
Rule 54    type -> func_call
Rule 55    type -> array_access
Rule 56    integer -> INTEGER
Rule 57    real -> REAL
Rule 58    string -> STRING
Rule 59    char -> CHAR
Rule 60    boolean -> BOOLEAN
Rule 61    identifier -> IDENTIFIER
Rule 62    plus -> PLUS
Rule 63    minus -> MINUS
Rule 64    times -> TIMES
Rule 65    division -> DIVISION
Rule 66    div -> DIV
Rule 67    mod -> MOD
Rule 68    comparator -> eq
Rule 69    comparator -> neq
Rule 70    comparator -> lt
Rule 71    comparator -> gt
Rule 72    comparator -> lte
Rule 73    comparator -> gte
Rule 74    comparator -> and
Rule 75    comparator -> or
Rule 76    comparator -> not
Rule 77    eq -> EQ
Rule 78    neq -> NEQ
Rule 79    lt -> LT
Rule 80    gt -> GT
Rule 81    lte -> LTE
Rule 82    gte -> GTE
Rule 83    and -> AND
Rule 84    or -> OR
Rule 85    not -> NOT
Rule 86    negation -> not boolean
Rule 87    negation -> not func_call
Rule 88    procedure -> PROCEDURE IDENTIFIER SEMICOLON procedure_body SEMICOLON
Rule 89    procedure -> PROCEDURE IDENTIFIER LPAREN func_args RPAREN SEMICOLON procedure_body SEMICOLON
Rule 90    procedure -> PROCEDURE IDENTIFIER SEMICOLON VAR func_variable_declaration procedure_body SEMICOLON
Rule 91    procedure -> PROCEDURE IDENTIFIER LPAREN func_args RPAREN SEMICOLON VAR func_variable_declaration procedure_body SEMICOLON
Rule 92    procedure_variable_declaration -> identifier_list COLON type_name SEMICOLON procedure_variable_declaration
Rule 93    procedure_variable_declaration -> identifier_list COLON type_name SEMICOLON
Rule 94    procedure_body -> BEGIN statements END
Rule 95    procedure_call -> prepare_func_call
Rule 96    procedure_call -> prepare_func_call LPAREN procedure_arg_list RPAREN
Rule 97    procedure_arg_list -> IDENTIFIER COMMA procedure_arg_list
Rule 98    procedure_arg_list -> IDENTIFIER
Rule 99    procedure_arg_list -> type COMMA procedure_arg_list
Rule 100   procedure_arg_list -> type
Rule 101   length -> LENGTH LPAREN type RPAREN
Rule 102   function -> func_header SEMICOLON VAR func_variable_declaration func_body SEMICOLON
Rule 103   function -> func_header SEMICOLON func_body SEMICOLON
Rule 104   func_header -> FUNCTION IDENTIFIER LPAREN func_args RPAREN COLON type_name
Rule 105   func_header -> FUNCTION IDENTIFIER LPAREN RPAREN COLON type_name
Rule 106   func_args -> func_arglist SEMICOLON func_args
Rule 107   func_args -> func_arglist
Rule 108   func_arglist -> identifier_list COLON type_name
Rule 109   func_variable_declaration -> identifier_list COLON type_name SEMICOLON func_variable_declaration
Rule 110   func_variable_declaration -> identifier_list COLON type_name SEMICOLON
Rule 111   func_body -> BEGIN statements END
Rule 112   func_call -> prepare_func_call LPAREN arg_list RPAREN
Rule 113   prepare_func_call -> IDENTIFIER
Rule 114   arg_list -> IDENTIFIER COMMA arg_list
Rule 115   arg_list -> IDENTIFIER
Rule 116   arg_list -> type COMMA arg_list
Rule 117   arg_list -> type
Rule 118   arg_list -> <empty>
Rule 119   cond_if -> IF condition THEN statement
Rule 120   cond_if -> IF condition THEN statement ELSE statement
Rule 121   cond_if -> IF condition THEN statement ELSE if_body
Rule 122   cond_if -> IF condition THEN if_body
Rule 123   cond_if -> IF condition THEN if_body ELSE if_body
Rule 124   cond_if -> IF condition THEN if_body ELSE statement
Rule 125   condition -> expression comparator expression
Rule 126   condition -> type comparator expression
Rule 127   condition -> type comparator type
Rule 128   condition -> expression comparator type
Rule 129   condition -> func_call
Rule 130   condition -> boolean
Rule 131   condition -> identifier
Rule 132   if_body -> BEGIN statements END
Rule 133   to -> TO
Rule 134   downto -> DOWNTO
Rule 135   for_loop -> FOR assignment to type DO statement
Rule 136   for_loop -> FOR assignment to type DO if_body
Rule 137   for_loop -> FOR assignment downto type DO statement
Rule 138   for_loop -> FOR assignment downto type DO if_body
Rule 139   while_loop -> WHILE condition DO statement
Rule 140   while_loop -> WHILE condition DO if_body
Rule 141   repeat_loop -> REPEAT statements UNTIL condition
Rule 142   readln -> READLN LPAREN type RPAREN
Rule 143   writeln -> WRITELN LPAREN writeln_args RPAREN
Rule 144   writeln_args -> type COMMA writeln_args
Rule 145   writeln_args -> type

Terminals, with rules where they appear

AND                  : 83
ARRAY                : 11
ASSIGNMENT           : 24 25 26 27
BEGIN                : 13 94 111 132
BOOLEAN              : 60
CHAR                 : 59
COLON                : 7 8 92 93 104 105 108 109 110
COMMA                : 9 97 99 114 116 144
COMMENT              : 
DIV                  : 66
DIVISION             : 65
DO                   : 135 136 137 138 139 140
DOT                  : 1
DOWNTO               : 134
ELSE                 : 120 121 123 124
END                  : 13 94 111 132
EQ                   : 77
FOR                  : 135 136 137 138
FUNCTION             : 104 105
GT                   : 80
GTE                  : 82
IDENTIFIER           : 2 9 10 12 61 88 89 90 91 97 98 104 105 113 114 115
IF                   : 119 120 121 122 123 124
INTEGER              : 56
LBRACKET             : 11 12
LENGTH               : 101
LPAREN               : 34 89 91 96 101 104 105 112 142 143
LT                   : 79
LTE                  : 81
MINUS                : 63
MOD                  : 67
NBOOLEAN             : 46
NCHAR                : 45
NEQ                  : 78
NINTEGER             : 42
NOT                  : 85
NREAL                : 43
NSTRING              : 44
OF                   : 11
OR                   : 84
PLUS                 : 62
PROCEDURE            : 88 89 90 91
PROGRAM              : 2
RANGE                : 11 41
RBRACKET             : 11 12
READLN               : 142
REAL                 : 57
REPEAT               : 141
RPAREN               : 34 89 91 96 101 104 105 112 142 143
SEMICOLON            : 2 7 8 14 15 88 88 89 89 90 90 91 91 92 93 102 102 103 103 106 109 110
STRING               : 58
THEN                 : 119 120 121 122 123 124
TIMES                : 64
TO                   : 133
UNTIL                : 141
VAR                  : 3 90 91 102
WHILE                : 139 140
WRITELN              : 143
error                : 

Nonterminals, with rules where they appear

and                  : 74
arg_list             : 112 114 116
array_access         : 55
array_type           : 47
assignment           : 17 135 136 137 138
block                : 1 5 6
body                 : 3 4
boolean              : 52 86 130
char                 : 51
comparator           : 125 126 127 128
cond_if              : 19
condition            : 33 119 120 121 122 123 124 139 140 141
div                  : 39
division             : 38
downto               : 137 138
eq                   : 68
expression           : 25 30 31 31 34 125 125 126 128
expression_paren     : 29
for_loop             : 21
func_arglist         : 106 107
func_args            : 89 91 104 106
func_body            : 102 103
func_call            : 32 54 87 129
func_header          : 102 103
func_variable_declaration : 90 91 102 109
function             : 5
gt                   : 71
gte                  : 73
header               : 1
identifier           : 53 131
identifier_list      : 7 8 9 92 93 108 109 110
if_body              : 121 122 123 123 124 136 138 140
integer              : 48
length               : 26
lt                   : 70
lte                  : 72
minus                : 36
mod                  : 40
negation             : 27
neq                  : 69
not                  : 76 86 87
operation            : 28 30 31
or                   : 75
plus                 : 35
prepare_func_call    : 95 96 112
procedure            : 6
procedure_arg_list   : 96 97 99
procedure_body       : 88 89 90 91
procedure_call       : 18
procedure_variable_declaration : 92
program              : 0
readln               : 23
real                 : 49
repeat_loop          : 22
statement            : 14 15 119 120 120 121 124 135 137 139
statements           : 13 14 94 111 132 141
string               : 50
times                : 37
to                   : 135 136
type                 : 11 11 12 24 24 25 26 27 28 28 30 99 100 101 116 117 126 127 127 128 135 136 137 138 142 144 145
type_name            : 7 8 11 92 93 104 105 108 109 110
variable_declaration : 3 7
while_loop           : 20
writeln              : 16
writeln_args         : 143 144

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . header block DOT
    (2) header -> . PROGRAM IDENTIFIER SEMICOLON

    PROGRAM         shift and go to state 3

    program                        shift and go to state 1
    header                         shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> header . block DOT
    (3) block -> . VAR variable_declaration body
    (4) block -> . body
    (5) block -> . function block
    (6) block -> . procedure block
    (13) body -> . BEGIN statements END
    (102) function -> . func_header SEMICOLON VAR func_variable_declaration func_body SEMICOLON
    (103) function -> . func_header SEMICOLON func_body SEMICOLON
    (88) procedure -> . PROCEDURE IDENTIFIER SEMICOLON procedure_body SEMICOLON
    (89) procedure -> . PROCEDURE IDENTIFIER LPAREN func_args RPAREN SEMICOLON procedure_body SEMICOLON
    (90) procedure -> . PROCEDURE IDENTIFIER SEMICOLON VAR func_variable_declaration procedure_body SEMICOLON
    (91) procedure -> . PROCEDURE IDENTIFIER LPAREN func_args RPAREN SEMICOLON VAR func_variable_declaration procedure_body SEMICOLON
    (104) func_header -> . FUNCTION IDENTIFIER LPAREN func_args RPAREN COLON type_name
    (105) func_header -> . FUNCTION IDENTIFIER LPAREN RPAREN COLON type_name

    VAR             shift and go to state 5
    BEGIN           shift and go to state 9
    PROCEDURE       shift and go to state 11
    FUNCTION        shift and go to state 12

    block                          shift and go to state 4
    body                           shift and go to state 6
    function                       shift and go to state 7
    procedure                      shift and go to state 8
    func_header                    shift and go to state 10

state 3

    (2) header -> PROGRAM . IDENTIFIER SEMICOLON

    IDENTIFIER      shift and go to state 13


state 4

    (1) program -> header block . DOT

    DOT             shift and go to state 14


state 5

    (3) block -> VAR . variable_declaration body
    (7) variable_declaration -> . identifier_list COLON type_name SEMICOLON variable_declaration
    (8) variable_declaration -> . identifier_list COLON type_name SEMICOLON
    (9) identifier_list -> . IDENTIFIER COMMA identifier_list
    (10) identifier_list -> . IDENTIFIER

    IDENTIFIER      shift and go to state 17

    variable_declaration           shift and go to state 15
    identifier_list                shift and go to state 16

state 6

    (4) block -> body .

    DOT             reduce using rule 4 (block -> body .)


state 7

    (5) block -> function . block
    (3) block -> . VAR variable_declaration body
    (4) block -> . body
    (5) block -> . function block
    (6) block -> . procedure block
    (13) body -> . BEGIN statements END
    (102) function -> . func_header SEMICOLON VAR func_variable_declaration func_body SEMICOLON
    (103) function -> . func_header SEMICOLON func_body SEMICOLON
    (88) procedure -> . PROCEDURE IDENTIFIER SEMICOLON procedure_body SEMICOLON
    (89) procedure -> . PROCEDURE IDENTIFIER LPAREN func_args RPAREN SEMICOLON procedure_body SEMICOLON
    (90) procedure -> . PROCEDURE IDENTIFIER SEMICOLON VAR func_variable_declaration procedure_body SEMICOLON
    (91) procedure -> . PROCEDURE IDENTIFIER LPAREN func_args RPAREN SEMICOLON VAR func_variable_declaration procedure_body SEMICOLON
    (104) func_header -> . FUNCTION IDENTIFIER LPAREN func_args RPAREN COLON type_name
    (105) func_header -> . FUNCTION IDENTIFIER LPAREN RPAREN COLON type_name

    VAR             shift and go to state 5
    BEGIN           shift and go to state 9
    PROCEDURE       shift and go to state 11
    FUNCTION        shift and go to state 12

    function                       shift and go to state 7
    block                          shift and go to state 18
    body                           shift and go to state 6
    procedure                      shift and go to state 8
    func_header                    shift and go to state 10

state 8

    (6) block -> procedure . block
    (3) block -> . VAR variable_declaration body
    (4) block -> . body
    (5) block -> . function block
    (6) block -> . procedure block
    (13) body -> . BEGIN statements END
    (102) function -> . func_header SEMICOLON VAR func_variable_declaration func_body SEMICOLON
    (103) function -> . func_header SEMICOLON func_body SEMICOLON
    (88) procedure -> . PROCEDURE IDENTIFIER SEMICOLON procedure_body SEMICOLON
    (89) procedure -> . PROCEDURE IDENTIFIER LPAREN func_args RPAREN SEMICOLON procedure_body SEMICOLON
    (90) procedure -> . PROCEDURE IDENTIFIER SEMICOLON VAR func_variable_declaration procedure_body SEMICOLON
    (91) procedure -> . PROCEDURE IDENTIFIER LPAREN func_args RPAREN SEMICOLON VAR func_variable_declaration procedure_body SEMICOLON
    (104) func_header -> . FUNCTION IDENTIFIER LPAREN func_args RPAREN COLON type_name
    (105) func_header -> . FUNCTION IDENTIFIER LPAREN RPAREN COLON type_name

    VAR             shift and go to state 5
    BEGIN           shift and go to state 9
    PROCEDURE       shift and go to state 11
    FUNCTION        shift and go to state 12

    procedure                      shift and go to state 8
    block                          shift and go to state 19
    body                           shift and go to state 6
    function                       shift and go to state 7
    func_header                    shift and go to state 10

state 9

    (13) body -> BEGIN . statements END
    (14) statements -> . statement SEMICOLON statements
    (15) statements -> . statement SEMICOLON
    (16) statement -> . writeln
    (17) statement -> . assignment
    (18) statement -> . procedure_call
    (19) statement -> . cond_if
    (20) statement -> . while_loop
    (21) statement -> . for_loop
    (22) statement -> . repeat_loop
    (23) statement -> . readln
    (143) writeln -> . WRITELN LPAREN writeln_args RPAREN
    (24) assignment -> . type ASSIGNMENT type
    (25) assignment -> . type ASSIGNMENT expression
    (26) assignment -> . type ASSIGNMENT length
    (27) assignment -> . type ASSIGNMENT negation
    (95) procedure_call -> . prepare_func_call
    (96) procedure_call -> . prepare_func_call LPAREN procedure_arg_list RPAREN
    (119) cond_if -> . IF condition THEN statement
    (120) cond_if -> . IF condition THEN statement ELSE statement
    (121) cond_if -> . IF condition THEN statement ELSE if_body
    (122) cond_if -> . IF condition THEN if_body
    (123) cond_if -> . IF condition THEN if_body ELSE if_body
    (124) cond_if -> . IF condition THEN if_body ELSE statement
    (139) while_loop -> . WHILE condition DO statement
    (140) while_loop -> . WHILE condition DO if_body
    (135) for_loop -> . FOR assignment to type DO statement
    (136) for_loop -> . FOR assignment to type DO if_body
    (137) for_loop -> . FOR assignment downto type DO statement
    (138) for_loop -> . FOR assignment downto type DO if_body
    (141) repeat_loop -> . REPEAT statements UNTIL condition
    (142) readln -> . READLN LPAREN type RPAREN
    (48) type -> . integer
    (49) type -> . real
    (50) type -> . string
    (51) type -> . char
    (52) type -> . boolean
    (53) type -> . identifier
    (54) type -> . func_call
    (55) type -> . array_access
    (113) prepare_func_call -> . IDENTIFIER
    (56) integer -> . INTEGER
    (57) real -> . REAL
    (58) string -> . STRING
    (59) char -> . CHAR
    (60) boolean -> . BOOLEAN
    (61) identifier -> . IDENTIFIER
    (112) func_call -> . prepare_func_call LPAREN arg_list RPAREN
    (12) array_access -> . IDENTIFIER LBRACKET type RBRACKET

    WRITELN         shift and go to state 30
    IF              shift and go to state 33
    WHILE           shift and go to state 34
    FOR             shift and go to state 35
    REPEAT          shift and go to state 36
    READLN          shift and go to state 37
    IDENTIFIER      shift and go to state 46
    INTEGER         shift and go to state 47
    REAL            shift and go to state 48
    STRING          shift and go to state 49
    CHAR            shift and go to state 50
    BOOLEAN         shift and go to state 51

    statements                     shift and go to state 20
    statement                      shift and go to state 21
    writeln                        shift and go to state 22
    assignment                     shift and go to state 23
    procedure_call                 shift and go to state 24
    cond_if                        shift and go to state 25
    while_loop                     shift and go to state 26
    for_loop                       shift and go to state 27
    repeat_loop                    shift and go to state 28
    readln                         shift and go to state 29
    type                           shift and go to state 31
    prepare_func_call              shift and go to state 32
    integer                        shift and go to state 38
    real                           shift and go to state 39
    string                         shift and go to state 40
    char                           shift and go to state 41
    boolean                        shift and go to state 42
    identifier                     shift and go to state 43
    func_call                      shift and go to state 44
    array_access                   shift and go to state 45

state 10

    (102) function -> func_header . SEMICOLON VAR func_variable_declaration func_body SEMICOLON
    (103) function -> func_header . SEMICOLON func_body SEMICOLON

    SEMICOLON       shift and go to state 52


state 11

    (88) procedure -> PROCEDURE . IDENTIFIER SEMICOLON procedure_body SEMICOLON
    (89) procedure -> PROCEDURE . IDENTIFIER LPAREN func_args RPAREN SEMICOLON procedure_body SEMICOLON
    (90) procedure -> PROCEDURE . IDENTIFIER SEMICOLON VAR func_variable_declaration procedure_body SEMICOLON
    (91) procedure -> PROCEDURE . IDENTIFIER LPAREN func_args RPAREN SEMICOLON VAR func_variable_declaration procedure_body SEMICOLON

    IDENTIFIER      shift and go to state 53


state 12

    (104) func_header -> FUNCTION . IDENTIFIER LPAREN func_args RPAREN COLON type_name
    (105) func_header -> FUNCTION . IDENTIFIER LPAREN RPAREN COLON type_name

    IDENTIFIER      shift and go to state 54


state 13

    (2) header -> PROGRAM IDENTIFIER . SEMICOLON

    SEMICOLON       shift and go to state 55


state 14

    (1) program -> header block DOT .

    $end            reduce using rule 1 (program -> header block DOT .)


state 15

    (3) block -> VAR variable_declaration . body
    (13) body -> . BEGIN statements END

    BEGIN           shift and go to state 9

    body                           shift and go to state 56

state 16

    (7) variable_declaration -> identifier_list . COLON type_name SEMICOLON variable_declaration
    (8) variable_declaration -> identifier_list . COLON type_name SEMICOLON

    COLON           shift and go to state 57


state 17

    (9) identifier_list -> IDENTIFIER . COMMA identifier_list
    (10) identifier_list -> IDENTIFIER .

    COMMA           shift and go to state 58
    COLON           reduce using rule 10 (identifier_list -> IDENTIFIER .)


state 18

    (5) block -> function block .

    DOT             reduce using rule 5 (block -> function block .)


state 19

    (6) block -> procedure block .

    DOT             reduce using rule 6 (block -> procedure block .)


state 20

    (13) body -> BEGIN statements . END

    END             shift and go to state 59


state 21

    (14) statements -> statement . SEMICOLON statements
    (15) statements -> statement . SEMICOLON

    SEMICOLON       shift and go to state 60


state 22

    (16) statement -> writeln .

    SEMICOLON       reduce using rule 16 (statement -> writeln .)
    ELSE            reduce using rule 16 (statement -> writeln .)


state 23

    (17) statement -> assignment .

    SEMICOLON       reduce using rule 17 (statement -> assignment .)
    ELSE            reduce using rule 17 (statement -> assignment .)


state 24

    (18) statement -> procedure_call .

    SEMICOLON       reduce using rule 18 (statement -> procedure_call .)
    ELSE            reduce using rule 18 (statement -> procedure_call .)


state 25

    (19) statement -> cond_if .

    SEMICOLON       reduce using rule 19 (statement -> cond_if .)
    ELSE            reduce using rule 19 (statement -> cond_if .)


state 26

    (20) statement -> while_loop .

    SEMICOLON       reduce using rule 20 (statement -> while_loop .)
    ELSE            reduce using rule 20 (statement -> while_loop .)


state 27

    (21) statement -> for_loop .

    SEMICOLON       reduce using rule 21 (statement -> for_loop .)
    ELSE            reduce using rule 21 (statement -> for_loop .)


state 28

    (22) statement -> repeat_loop .

    SEMICOLON       reduce using rule 22 (statement -> repeat_loop .)
    ELSE            reduce using rule 22 (statement -> repeat_loop .)


state 29

    (23) statement -> readln .

    SEMICOLON       reduce using rule 23 (statement -> readln .)
    ELSE            reduce using rule 23 (statement -> readln .)


state 30

    (143) writeln -> WRITELN . LPAREN writeln_args RPAREN

    LPAREN          shift and go to state 61


state 31

    (24) assignment -> type . ASSIGNMENT type
    (25) assignment -> type . ASSIGNMENT expression
    (26) assignment -> type . ASSIGNMENT length
    (27) assignment -> type . ASSIGNMENT negation

    ASSIGNMENT      shift and go to state 62


state 32

    (95) procedure_call -> prepare_func_call .
    (96) procedure_call -> prepare_func_call . LPAREN procedure_arg_list RPAREN
    (112) func_call -> prepare_func_call . LPAREN arg_list RPAREN

    SEMICOLON       reduce using rule 95 (procedure_call -> prepare_func_call .)
    ELSE            reduce using rule 95 (procedure_call -> prepare_func_call .)
    LPAREN          shift and go to state 63


state 33

    (119) cond_if -> IF . condition THEN statement
    (120) cond_if -> IF . condition THEN statement ELSE statement
    (121) cond_if -> IF . condition THEN statement ELSE if_body
    (122) cond_if -> IF . condition THEN if_body
    (123) cond_if -> IF . condition THEN if_body ELSE if_body
    (124) cond_if -> IF . condition THEN if_body ELSE statement
    (125) condition -> . expression comparator expression
    (126) condition -> . type comparator expression
    (127) condition -> . type comparator type
    (128) condition -> . expression comparator type
    (129) condition -> . func_call
    (130) condition -> . boolean
    (131) condition -> . identifier
    (28) expression -> . type operation type
    (29) expression -> . expression_paren
    (30) expression -> . expression operation type
    (31) expression -> . expression operation expression
    (32) expression -> . func_call
    (33) expression -> . condition
    (48) type -> . integer
    (49) type -> . real
    (50) type -> . string
    (51) type -> . char
    (52) type -> . boolean
    (53) type -> . identifier
    (54) type -> . func_call
    (55) type -> . array_access
    (112) func_call -> . prepare_func_call LPAREN arg_list RPAREN
    (60) boolean -> . BOOLEAN
    (61) identifier -> . IDENTIFIER
    (34) expression_paren -> . LPAREN expression RPAREN
    (56) integer -> . INTEGER
    (57) real -> . REAL
    (58) string -> . STRING
    (59) char -> . CHAR
    (12) array_access -> . IDENTIFIER LBRACKET type RBRACKET
    (113) prepare_func_call -> . IDENTIFIER

    BOOLEAN         shift and go to state 51
    IDENTIFIER      shift and go to state 73
    LPAREN          shift and go to state 72
    INTEGER         shift and go to state 47
    REAL            shift and go to state 48
    STRING          shift and go to state 49
    CHAR            shift and go to state 50

    condition                      shift and go to state 64
    expression                     shift and go to state 65
    type                           shift and go to state 66
    func_call                      shift and go to state 67
    boolean                        shift and go to state 68
    identifier                     shift and go to state 69
    expression_paren               shift and go to state 70
    integer                        shift and go to state 38
    real                           shift and go to state 39
    string                         shift and go to state 40
    char                           shift and go to state 41
    array_access                   shift and go to state 45
    prepare_func_call              shift and go to state 71

state 34

    (139) while_loop -> WHILE . condition DO statement
    (140) while_loop -> WHILE . condition DO if_body
    (125) condition -> . expression comparator expression
    (126) condition -> . type comparator expression
    (127) condition -> . type comparator type
    (128) condition -> . expression comparator type
    (129) condition -> . func_call
    (130) condition -> . boolean
    (131) condition -> . identifier
    (28) expression -> . type operation type
    (29) expression -> . expression_paren
    (30) expression -> . expression operation type
    (31) expression -> . expression operation expression
    (32) expression -> . func_call
    (33) expression -> . condition
    (48) type -> . integer
    (49) type -> . real
    (50) type -> . string
    (51) type -> . char
    (52) type -> . boolean
    (53) type -> . identifier
    (54) type -> . func_call
    (55) type -> . array_access
    (112) func_call -> . prepare_func_call LPAREN arg_list RPAREN
    (60) boolean -> . BOOLEAN
    (61) identifier -> . IDENTIFIER
    (34) expression_paren -> . LPAREN expression RPAREN
    (56) integer -> . INTEGER
    (57) real -> . REAL
    (58) string -> . STRING
    (59) char -> . CHAR
    (12) array_access -> . IDENTIFIER LBRACKET type RBRACKET
    (113) prepare_func_call -> . IDENTIFIER

    BOOLEAN         shift and go to state 51
    IDENTIFIER      shift and go to state 73
    LPAREN          shift and go to state 72
    INTEGER         shift and go to state 47
    REAL            shift and go to state 48
    STRING          shift and go to state 49
    CHAR            shift and go to state 50

    condition                      shift and go to state 74
    expression                     shift and go to state 65
    type                           shift and go to state 66
    func_call                      shift and go to state 67
    boolean                        shift and go to state 68
    identifier                     shift and go to state 69
    expression_paren               shift and go to state 70
    integer                        shift and go to state 38
    real                           shift and go to state 39
    string                         shift and go to state 40
    char                           shift and go to state 41
    array_access                   shift and go to state 45
    prepare_func_call              shift and go to state 71

state 35

    (135) for_loop -> FOR . assignment to type DO statement
    (136) for_loop -> FOR . assignment to type DO if_body
    (137) for_loop -> FOR . assignment downto type DO statement
    (138) for_loop -> FOR . assignment downto type DO if_body
    (24) assignment -> . type ASSIGNMENT type
    (25) assignment -> . type ASSIGNMENT expression
    (26) assignment -> . type ASSIGNMENT length
    (27) assignment -> . type ASSIGNMENT negation
    (48) type -> . integer
    (49) type -> . real
    (50) type -> . string
    (51) type -> . char
    (52) type -> . boolean
    (53) type -> . identifier
    (54) type -> . func_call
    (55) type -> . array_access
    (56) integer -> . INTEGER
    (57) real -> . REAL
    (58) string -> . STRING
    (59) char -> . CHAR
    (60) boolean -> . BOOLEAN
    (61) identifier -> . IDENTIFIER
    (112) func_call -> . prepare_func_call LPAREN arg_list RPAREN
    (12) array_access -> . IDENTIFIER LBRACKET type RBRACKET
    (113) prepare_func_call -> . IDENTIFIER

    INTEGER         shift and go to state 47
    REAL            shift and go to state 48
    STRING          shift and go to state 49
    CHAR            shift and go to state 50
    BOOLEAN         shift and go to state 51
    IDENTIFIER      shift and go to state 73

    assignment                     shift and go to state 75
    type                           shift and go to state 31
    integer                        shift and go to state 38
    real                           shift and go to state 39
    string                         shift and go to state 40
    char                           shift and go to state 41
    boolean                        shift and go to state 42
    identifier                     shift and go to state 43
    func_call                      shift and go to state 44
    array_access                   shift and go to state 45
    prepare_func_call              shift and go to state 71

state 36

    (141) repeat_loop -> REPEAT . statements UNTIL condition
    (14) statements -> . statement SEMICOLON statements
    (15) statements -> . statement SEMICOLON
    (16) statement -> . writeln
    (17) statement -> . assignment
    (18) statement -> . procedure_call
    (19) statement -> . cond_if
    (20) statement -> . while_loop
    (21) statement -> . for_loop
    (22) statement -> . repeat_loop
    (23) statement -> . readln
    (143) writeln -> . WRITELN LPAREN writeln_args RPAREN
    (24) assignment -> . type ASSIGNMENT type
    (25) assignment -> . type ASSIGNMENT expression
    (26) assignment -> . type ASSIGNMENT length
    (27) assignment -> . type ASSIGNMENT negation
    (95) procedure_call -> . prepare_func_call
    (96) procedure_call -> . prepare_func_call LPAREN procedure_arg_list RPAREN
    (119) cond_if -> . IF condition THEN statement
    (120) cond_if -> . IF condition THEN statement ELSE statement
    (121) cond_if -> . IF condition THEN statement ELSE if_body
    (122) cond_if -> . IF condition THEN if_body
    (123) cond_if -> . IF condition THEN if_body ELSE if_body
    (124) cond_if -> . IF condition THEN if_body ELSE statement
    (139) while_loop -> . WHILE condition DO statement
    (140) while_loop -> . WHILE condition DO if_body
    (135) for_loop -> . FOR assignment to type DO statement
    (136) for_loop -> . FOR assignment to type DO if_body
    (137) for_loop -> . FOR assignment downto type DO statement
    (138) for_loop -> . FOR assignment downto type DO if_body
    (141) repeat_loop -> . REPEAT statements UNTIL condition
    (142) readln -> . READLN LPAREN type RPAREN
    (48) type -> . integer
    (49) type -> . real
    (50) type -> . string
    (51) type -> . char
    (52) type -> . boolean
    (53) type -> . identifier
    (54) type -> . func_call
    (55) type -> . array_access
    (113) prepare_func_call -> . IDENTIFIER
    (56) integer -> . INTEGER
    (57) real -> . REAL
    (58) string -> . STRING
    (59) char -> . CHAR
    (60) boolean -> . BOOLEAN
    (61) identifier -> . IDENTIFIER
    (112) func_call -> . prepare_func_call LPAREN arg_list RPAREN
    (12) array_access -> . IDENTIFIER LBRACKET type RBRACKET

    WRITELN         shift and go to state 30
    IF              shift and go to state 33
    WHILE           shift and go to state 34
    FOR             shift and go to state 35
    REPEAT          shift and go to state 36
    READLN          shift and go to state 37
    IDENTIFIER      shift and go to state 46
    INTEGER         shift and go to state 47
    REAL            shift and go to state 48
    STRING          shift and go to state 49
    CHAR            shift and go to state 50
    BOOLEAN         shift and go to state 51

    statements                     shift and go to state 76
    statement                      shift and go to state 21
    writeln                        shift and go to state 22
    assignment                     shift and go to state 23
    procedure_call                 shift and go to state 24
    cond_if                        shift and go to state 25
    while_loop                     shift and go to state 26
    for_loop                       shift and go to state 27
    repeat_loop                    shift and go to state 28
    readln                         shift and go to state 29
    type                           shift and go to state 31
    prepare_func_call              shift and go to state 32
    integer                        shift and go to state 38
    real                           shift and go to state 39
    string                         shift and go to state 40
    char                           shift and go to state 41
    boolean                        shift and go to state 42
    identifier                     shift and go to state 43
    func_call                      shift and go to state 44
    array_access                   shift and go to state 45

state 37

    (142) readln -> READLN . LPAREN type RPAREN

    LPAREN          shift and go to state 77


state 38

    (48) type -> integer .
